<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="calibrated">Calibrated</string>
    <string name="calibrating">Calibrating</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="version">Version</string>
    <string name="deleted">Deleted</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="expires">Expires</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="result">Result</string>
    <string name="warning">Warning</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="runTest">Run Test</string>
    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="analyze">Analyse</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensors</string>
    <string name="calibrationIsInvalid">Invalid calibration</string>
    <string name="tryRecalibrating">Try recalibrating</string>
    <string name="reagentExpiry">Reagent expiry</string>
    <string name="reagentBatch">Reagent batch</string>
    <string name="rgb_example_value">RGB (e.g. 255.255.255)</string>
    <string name="expired">Expired</string>
    <string name="couldNotCalibrate">Could not calibrate</string>
    <string name="dilution">Dilution</string>
    <string name="selectDilution">Select amount of dilution</string>
    <plurals name="dilutions">
        <item quantity="one">No Dilution</item>
        <item quantity="many">%1$d Times Dilution</item>
        <item quantity="other">%1$d Times Dilution</item>
    </plurals>
    <string name="noDilution">No Dilution</string>
    <string name="timesDilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="customDilution">Custom Dilution</string>
    <string name="enterDilutionFactor">Enter Dilution Factor</string>
    <string name="deviceConnecting">Connecting to Device</string>
    <string name="acceptResult">Accept Result</string>
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="calibratePoint">Calibrate %.0f μS/cm</string>
    <string name="calibrationSuccessful">Calibration Successful</string>
    <string name="sensorCalibrated">EC Sensor has been calibrated</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>
    <string name="copyrightMessage">Copyright © ffem</string>
    <string name="legalInformation">Legal Information</string>
    <string name="selectTest">Select Test</string>
    <string name="awaitingResult">Awaiting result</string>
    <string name="calibrationDetails">Calibration Details</string>
    <string name="customTests">Custom tests</string>
    <string name="deviceConnected">Device connected</string>
    <string name="go">Go</string>
    <string name="saving">Saving</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="verifySensorDetails">Verify sensor details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
    <string name="ecSensorId">EC Sensor Id</string>
    <string name="testWithDilution">Test with Dilution</string>
    <string name="brightness">Brightness</string>
    <string name="measure_instruction">Put strip on black area with colour patches to the left. Hold camera above colour card until measurement is complete.</string>
    <string name="imageQuality">Image quality</string>
    <string name="instructions">Instructions</string>
    <string name="shadows">Shadows</string>
    <string name="prepare_test">Prepare for test</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_for">Waiting for %s</string>
    <string name="success_quality_checks">Success! Quality check passed</string>
    <string name="prepareForCalibration">Prepare for calibration</string>
    <string name="stripTest">Strip Test</string>
    <string name="no_result">No result</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_image_quality">Checking image quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="ready_for_photo">Ready for photo</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="stop_test">Stop test</string>
    <string name="noData">No data</string>
    <string name="error_calibrating">Calibration failed</string>
    <string name="camera_not_good">The camera does not meet the minimum requirements.\n\nFor best results, at least 8 megapixel camera required.</string>
    <string name="qualityCheckFailed">Quality check failed</string>
    <string name="shadows_detected">Shadows/reflections detected</string>
    <string name="better_light_required">Better light required</string>
    <string name="tilt_camera_in_direction">Tilt camera in direction of arrow</string>
    <string name="move_camera_closer">Move camera closer to the card</string>
    <string name="avoid_shadows_on_card">Please avoid shadows on the card</string>
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>
    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>
    <string name="storagePermission">Storage permission is required</string>
    <string name="cameraAndStoragePermissions">Camera &amp; storage permissions are required</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>
    <string name="incorrectDevice">Incorrect Device</string>
    <string name="expectedDeviceNotFound">The expected sensor was not found.</string>
    <string name="connectCorrectSensor"><Data><![CDATA[Connect the <b>%s</b> sensor.]]></Data></string>
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
    <string name="errorCalibrationIncomplete">Calibration for %1$s is incomplete</string>
    <string name="doYouWantToCalibrate">Do you want to calibrate now?</string>
    <string name="errorLoadingConfiguration">Could not load configuration information</string>
    <string name="calibrateWithNewReagent">Recalibrate with fresh reagent</string>
    <string name="placeDevice">Place device face down on a flat surface</string>
    <string name="errorTestInterrupted">Test was interrupted.</string>
    <string name="doNotMoveDeviceDuringTest">Do not move the phone during the test</string>
    <string name="errorTestFailed">Colour does not match any calibrated colours.</string>
    <string name="chamberNotFound">Could not complete test.</string>
    <string name="checkChamberPlacement">Check that the chamber has been placed correctly.</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>
    <string name="incorrectCalibrationCanAffect">Incorrect calibration can affect the proper functioning of the sensor</string>
    <string name="sensorNotFound">Sensor not found</string>
    <string name="cleanTheEcSensor">Clean the EC Sensor properly</string>
    <string name="getEcSolutionReady">Get ready the fluid with EC of %.0f μS/cm</string>
    <string name="dipEcSensorInSolution">Dip EC Sensor in the fluid and press Go</string>
    <string name="errorCalibrationExpired">Calibration is past its reagent expiry date</string>
    <string name="orderFreshBatch">Please order a fresh batch of reagent and recalibrate</string>
    <string name="highLevelRecommendation">Note: High level of contamination found, it is recommended to test with dilution</string>
    <string name="prepareSolutionsForCalibration">Prepare 6 solutions with these EC values</string>
    <string name="nearby_devices">Nearby devices</string>
    <string name="connect_device">Connect to your device</string>
    <string name="to_turn_bluetooth_on">To turn bluetooth on:</string>
    <string name="connect">Connect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="location_permission">Location permission is required for bluetooth connection</string>
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning…</string>
    <string name="searching_for_device">Searching for bluetooth devices</string>
    <string name="view_results">View results</string>
    <string name="take_photo_meter_result">Take a photo of the meter screen displaying the measurement result</string>
    <string name="enter_measured_value">Enter the measured value</string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>
    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="take_photo_compartments">Take a photo of the compartment bag</string>
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="apache_license_2">Apache License 2.0</string>
    <string name="mit_license">MIT License</string>
    <string name="cca_share_license">CC BY-NC-SA 4.0 – International</string>
    <string name="cca_license">CC BY 4.0 International</string>
    <string name="software_notices">Software Notices</string>
    <string name="eclipse_public_license">Eclipse Public License 1.0</string>
    <string name="experiment">Experiment</string>
    <string name="sendData">Send Data</string>
    <string name="water_not_safe_message">Contamination is higher than the acceptable safe level standard for drinking water.</string>
    <string name="water_safe_message">Contamination is within the acceptable safe level standard for drinking water.</string>
</resources>